# IDLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: IDLogConfig.cmake.in  version.rc.in
examples/: CMakeLists.txt  config_example.cpp  example_async.cpp  example_basic.cpp  example_config.cpp  example_full.cpp  simple_example.cpp
include/IDLog/: IDLog.h
include/IDLog/Appender/: AsyncAppender.h  ConsoleAppender.h  FileAppender.h  LogAppender.h
include/IDLog/Core/: Configuration.h  LogEvent.h  LogFactory.h  LogLevel.h  Logger.h  LoggerManager.h  Macro.h  Statistics.h  Version.h
include/IDLog/Filter/: Filter.h  LevelFilter.h
include/IDLog/Formatter/: Formatter.h  JsonFormatter.h  PatternFormatter.h
include/IDLog/Utils/: AsyncQueue.h  AsyncQueue.inl  ConfigParseUtil.h  StringUtil.h  ThreadUtil.h
src/: CMakeLists.txt
src/Appender/: AsyncAppender.cpp  ConsoleAppender.cpp  FileAppender.cpp  LogAppender.cpp
src/Core/: Configuration.cpp  LogEvent.cpp  LogFactory.cpp  Logger.cpp  LoggerManager.cpp  Statistics.cpp  Version.cpp
src/Filter/: Filter.cpp  LevelFilter.cpp
src/Formatter/: JsonFormatter.cpp  PatternFormatter.cpp
src/Utils/: ConfigParseUtil.cpp  StringUtil.cpp  ThreadUtil.cpp
tests/: CMakeLists.txt  test_appender.cpp  test_async.cpp  test_basic.cpp  test_benchmark.cpp  test_config.cpp  test_core.cpp  test_filter.cpp  test_formatter.cpp
